--- a/http-api-gateway/package.json
+++ b/http-api-gateway/package.json
@@ -24,6 +24,7 @@
     "@nestjs/core": "^10.0.0",
     "@nestjs/microservices": "^10.3.8",
     "@nestjs/platform-express": "^10.0.0",
+    "nats": "^2.25.0",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1"
   },
